# lambda-executor

./: .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  Makefile  README.md  run_as_user.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  docker.yaml
configs/: config_vars.docker.yaml  config_vars.testing.yaml  config_vars.yaml  static_config.yaml
src/: main.cpp
src/benchmarks/: execute-lua.cpp
src/miet/lambda-executor/handlers/: execute-lambda.cpp  execute-lambda.hpp
src/miet/lambda-executor/lua/: http-lib.cpp  http-lib.hpp  utils.hpp
src/ut/: execute-lambda.cpp  execute-lua.cpp
tests/: test_execute_lambda.py
